Closed
Bug 705251
Opened 14 years ago
Closed 14 years ago
IonMonkey: "Assertion failure: isLowered()"
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Assigned: jandem)
References
Details
Attachments
(1 file, 1 obsolete file)
|
1.37 KB,
patch
|
cdleary
:
review+
|
Details | Diff | Splinter Review |
A modified version of bitops-bits-in-byte asserts with
Assertion failure: isLowered(), at ion/MIR.h:408
| Assignee | ||
Comment 1•14 years ago
|
||
The problem was that we removed MPassArg for |this|, but didn't unwrap it in inheritUnwrapArgs. Also fixes ion/inlining/inline-callarg-bailout.js
Attachment #576906 -
Flags: review?(cdleary)
| Assignee | ||
Comment 2•14 years ago
|
||
The right version this time.
Attachment #576906 -
Attachment is obsolete: true
Attachment #576906 -
Flags: review?(cdleary)
Attachment #576907 -
Flags: review?(cdleary)
Updated•14 years ago
|
Attachment #576907 -
Flags: review?(cdleary) → review+
| Assignee | ||
Comment 3•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•