Unwrap |this| in inheritUnwrapArgs (bug 705251, r=cdleary)